סידרתי שיהיה אפשר לתת לאפליקציה הרשאה לגלריית התמונות של המכשיר

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="select_image_from_gallery">select image from gallery</string>
     <string name="save">save</string>
     <string name="cancel">cancel</string>
+    <string name="delete" />
 
 
 </resources>
